--- a/src/components/home-section.css
+++ b/src/components/home-section.css
@@ -13,9 +13,12 @@
 .background {
   position: relative;
 }
+.background .img {
+  height: 100vh;
+}
 .background img {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 .overlay {
   position: absolute;
@@ -47,6 +50,9 @@
   line-height: 1.5;
 }
 @media (max-width: 498px) {
+  .info {
+    width: 90%;
+  }
   .info h1 {
     font-size: 30px;
   }
@@ -265,6 +271,11 @@
 .modelConrainer .modelContect button {
   padding: 1rem 0;
 }
+@media (max-width: 599px) {
+  .modelConrainer .modelContect {
+    width: 95%;
+  }
+}
 .about {
   width: 80%;
   margin: 5% auto;
@@ -435,7 +446,7 @@
     padding: 2%;
   }
   .footer .logo {
-    width: 100%;
+    width: 90%;
   }
   .footer .social-icons .icon {
     margin: 1%;
